--- a/client/src/Pages/SignupVendedor/SignupVendedor.module.css
+++ b/client/src/Pages/SignupVendedor/SignupVendedor.module.css
@@ -4,11 +4,21 @@
     align-items: center;
     flex-direction: column;
     row-gap: 40px;
+    margin-top: 50px;
+}
+
+.subContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .disclaimer{
     font-weight: 400;
     font-size: 11px;
+    width: 285px;
+    margin-top: 25px;
 }
 
 .title{
