--- a/client/src/Pages/Login/Login.module.css
+++ b/client/src/Pages/Login/Login.module.css
@@ -8,17 +8,35 @@
 }
 
 .title{
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 24px;
     color: #FF8906;
-    margin: 0;
+    margin: 0 0 0 15px;
 }
 
 .textBottom{
     font-weight: 400;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .textLink{
+    color: #E53170;
+
+}
+
+.decoContainer{
+    display: flex;
+    margin: 30px 0 30px 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.line{
+    width: 80px;
+    height: 1px;
+    border-color: #E53170;
+}
+
+.decoration{
     color: #E53170;
 }
