--- a/client/src/Pages/SignupVendedor/SignupVendedor.module.css
+++ b/client/src/Pages/SignupVendedor/SignupVendedor.module.css
@@ -18,21 +18,32 @@
     font-weight: 400;
     font-size: 11px;
     width: 285px;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .title{
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 24px;
     color: #FF8906;
     margin: 0;
 }
 
 .textBottom{
     font-weight: 400;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .textLink{
     color: #E53170;
+}
+
+
+@media only screen and (max-width: 375px) {
+    .title{
+        font-weight: 500;
+        font-size: 20px;
+        color: #FF8906;
+        margin: 0;
+        width: 270px;
+    }
 }
