--- a/client/src/components/FormRegister/FormRegisterVendedor.module.css
+++ b/client/src/components/FormRegister/FormRegisterVendedor.module.css
@@ -73,3 +73,39 @@
     font-size: 15px;
     font-family: 'Figtree', sans-serif;
 }
+
+@media only screen and (max-width: 720px) {
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 375px) {
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+        margin-left: 10px;
+    }
+
+    .containerLarge{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .textareaMedium{
+        width: 270px;
+        height: 90px;
+    }
+    
+    .textareaLarge{
+        width: 270px;
+        height: 140px;
+    }
+
+}
