--- a/client/src/Components/Footer/Footer.module.css
+++ b/client/src/Components/Footer/Footer.module.css
@@ -1,8 +1,23 @@
 .footer{
-    
-    position: absolute;
-    width: 100%;
-    height: 2px;
-   background-color: rgba(0, 0, 0, 0.322) ;
-   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  bottom: 0;
+  column-gap: 50px;
+}
+
+.ingeniaText{
+    font-size: 25px;
+    font-weight: 700;
+    color: #FF8906;
+}
+
+.aboutText{
+    font-size: 20px;
+    font-weight: 400;
+    color: #FF8906;
 }
