--- a/client/src/Components/Hero Section/HeroSection.module.css
+++ b/client/src/Components/Hero Section/HeroSection.module.css
@@ -1,13 +1,13 @@
 .contenedorinicial{
-    width: 1700px;
+    width: 1400px;
     height: 290px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 90px;
+    margin-left: 50px;
     margin-top: 20px;
-    
+    margin-bottom: 30px;
     }
   .imgcarrusel {
     position: absolute;
@@ -49,3 +49,22 @@
     opacity:0.7;
    
   }
+
+@media only screen and (max-width: 1366px) {
+  .contenedorinicial{
+    width: 1100px;
+    
+    }
+}
+
+@media only screen and (max-width: 1170px) {
+  .contenedorinicial{
+    width: 950px;
+    margin-left: 30px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+
+  
+}
