--- a/client/src/Pages/Profile/Profile.module.css
+++ b/client/src/Pages/Profile/Profile.module.css
@@ -1,13 +1,15 @@
 .container{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 60px;
+    justify-content: space-around;
+    margin-top: 30px;
+    height: 570px ;
+    column-gap: 30px;
 }
 
 .subContainer{
     display: flex;
     flex-direction: column;
+    margin-left: 80px;
 }
 
 .user{
@@ -24,13 +26,12 @@
 }
 
 .optionsContainer{
-
-}
-
-.optionsContainer{
     width: 170px;
 }
 
 .form{
-    width: 300px;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
