--- a/client/src/Pages/SignupVendedor/SignupVendedor.module.css
+++ b/client/src/Pages/SignupVendedor/SignupVendedor.module.css
@@ -28,6 +28,24 @@
     margin: 0;
 }
 
+.decoContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
+    margin: 0;
+}
+
+.line{
+    width: 80px;
+    height: 1px;
+    border-color: #E53170;
+}
+
+.decoration{
+    color: #E53170;
+}
+
 .textBottom{
     font-weight: 400;
     font-size: 15px;
@@ -36,6 +54,7 @@
 .textLink{
     color: #E53170;
 }
+
 
 
 @media only screen and (max-width: 375px) {
