feat(front: auth Google, back: Cloudinary)

--- a/client/src/Pages/LandingSeller/LandingSeller.module.css
+++ b/client/src/Pages/LandingSeller/LandingSeller.module.css
@@ -19,7 +19,7 @@
 .banner{
   width:940px;
   height:720px;
-  background-image: url('https://i.postimg.cc/2jXWHHW2/banner-vendedor.png');
+  background-image: url('https://res.cloudinary.com/dvvqbwhcc/image/upload/v1684286572/ingeniaAssets/banner-vendedor_p1ztmc.png');
   background-size:cover;
   background-position:center;
   background-repeat:no-repeat;	
