--- a/client/src/Pages/PostCourse/PostCourse.module.css
+++ b/client/src/Pages/PostCourse/PostCourse.module.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     margin-left: 80px;
 }
 
@@ -9,18 +9,35 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-direction: column;
     width: 100%;
+    margin-bottom: 80px;
 }
 
 .title{
     font-size: 36px;
     font-weight: 500;
     color: #FF8906;
+    margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 375px) {
+.subtitle{
+    font-size: 20px;
+    font-weight: 400;
+    color: #E53170;
+    margin: 0;
+    text-align: left;
+}
+
+@media only screen and (max-width: 1000px) {
+
+}   
+
+
+@media only screen and (max-width: 600px) {
     .container{
         margin-left: 0px;
+        align-items: center;
     }
     .subContainer{
         display: flex;
@@ -31,6 +48,11 @@
         font-size: 26px;
         font-weight: 500;
         color: #FF8906;
+        margin-left: 80px;
+    }
+    .subtitle{
+        margin-left: 80px;
+        font-size: 15px;
     }
 }
 
