refactor(src/components;src/Pages)

--- a/client/src/Components/Home/Homevista/Home.module.css
+++ b/client/src/Components/Home/Homevista/Home.module.css
@@ -8,7 +8,7 @@
 }
 .Home{
     display: flex;
-    flex-direction: row;
     margin-top: 8rem;
-   
+    justify-content: space-around;
+    align-items: flex-start;
 }
