--- a/client/src/components/FormLogin/FormLogin.module.css
+++ b/client/src/components/FormLogin/FormLogin.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     row-gap: 30px;
     justify-content: center;
-    align-items: center;
+
     margin-top: 35px;
 }
 
@@ -21,6 +21,23 @@
     color: #E53170;
 }
 
+.error{
+    margin: -28px 0 0 0;
+    text-align: left;
+    color: #E53170;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+
+.errorPass{
+    margin: 4px 0 0 0;
+    text-align: left;
+    color: #E53170;
+    font-size: 13px;
+    font-weight: 500;
+}
+
 
 .button{
     background: #FF8906;
@@ -35,11 +52,19 @@
     box-shadow: 0 0 4px rgba(0,0,0,0.25);
 }
 
+.buttonOff{
+    background: #9B9B9B;
+    border-radius: 5px;
+    border-style: none;
+    width: 285px;
+    height: 40px;
+}
+
 .button_text{
     color: #FFFFFE;
     font-style: normal;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 18px;
     font-family: 'Figtree', sans-serif;
 }
 
