--- a/client/src/components/FormRegister/FormRegisterUsuario.module.css
+++ b/client/src/components/FormRegister/FormRegisterUsuario.module.css
@@ -1,9 +1,8 @@
 .form{
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 20px;
     justify-content: center;
-    align-items: center;
 }
 
 .input{
@@ -14,6 +13,13 @@
     height: 40px;
 }
 
+.error{
+    margin: -17px 0 0 0;
+    text-align: left;
+    color: #E53170;
+    font-size: 13px;
+    font-weight: 500;
+}
 
 .button{
     background: #FF8906;
@@ -28,10 +34,18 @@
     box-shadow: 0 0 4px rgba(0,0,0,0.25);
 }
 
+.buttonOff{
+    background: #9B9B9B;
+    border-radius: 5px;
+    border-style: none;
+    width: 285px;
+    height: 40px;
+}
+
 .button_text{
     color: #FFFFFE;
     font-style: normal;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 18px;
     font-family: 'Figtree', sans-serif;
 }
