--- a/client/src/Components/FormCourse/FormCourse.module.css
+++ b/client/src/Components/FormCourse/FormCourse.module.css
@@ -108,6 +108,18 @@
     border-radius: 5px;
 }
 
+.textareaMedium{
+    border-color: black;
+    width: 250px;
+    height: 100px;
+    resize: none;
+    font-weight: 400;
+    font-size: 15px;
+    font-family: 'Figtree', sans-serif;
+    padding: 10px;
+    border-radius: 5px;
+}
+
 .checkboxContainer{
     display: flex;
     justify-content: flex-start;
@@ -119,7 +131,7 @@
     background: #FF8906;
     border-radius: 5px;
     border-style: none;
-    margin-top: 20px;
+    margin-top: 50px;
     width: 280px;
     height: 40px;
 }
@@ -167,6 +179,10 @@
     }
 
     .textarea{
+        width: 400px;
+    }
+
+    .textareaMedium{
         width: 400px;
     }
 
