--- a/client/src/Pages/MyCourses/MyCourses.module.css
+++ b/client/src/Pages/MyCourses/MyCourses.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: flex-start;
     margin-left: 80px;
-    height: 600px ;
+    margin-right: 80px;
+    /* height: 600px ; */
 }
 
 
