--- a/client/src/Components/FormArticle/FormArticle.module.css
+++ b/client/src/Components/FormArticle/FormArticle.module.css
@@ -127,6 +127,22 @@
     width: 250px;
 }
 
+.errorImage{
+    margin: 0;
+    text-align: left;
+    color: #E53170;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.error{
+    margin: -12px 0 0 0;
+    text-align: left;
+    color: #E53170;
+    font-size: 13px;
+    font-weight: 500;
+}
+
 .button{
     background: #FF8906;
     border-radius: 5px;
@@ -139,6 +155,14 @@
 .button:hover{
     transform: scaleX(1.03) scaleY(1.03);
     box-shadow: 0 0 4px rgba(0,0,0,0.25);
+}
+
+.buttonOff{
+    background: #9B9B9B;
+    border-radius: 5px;
+    border-style: none;
+    width: 285px;
+    height: 40px;
 }
 
 .button_text{
