--- a/client/src/Pages/Profile/Profile.module.css
+++ b/client/src/Pages/Profile/Profile.module.css
@@ -1,9 +1,9 @@
 .container{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 50px;
     height: 570px ;
-    column-gap: 30px;
+    column-gap: 100px;
     margin-bottom: 100px;
 }
 
@@ -30,7 +30,7 @@
     width: 170px;
 }
 
-.form{
+.subView{
     width: 700px;
     display: flex;
     justify-content: center;
