--- a/client/src/Pages/Article/Article.module.css
+++ b/client/src/Pages/Article/Article.module.css
@@ -17,6 +17,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    margin-top: 80px;
     width: 100%;
 }
 
@@ -24,6 +25,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    margin-top: 30px;
+    column-gap: 80px;
 }
 
 .containerParagraph{
@@ -38,11 +41,13 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    margin-top: 30px;
+    column-gap: 80px;
 }
 
 .imageContainer{
-    width:400px;
-    height:270px;
+    width:500px;
+    height:370px;
 }
 
 .title{
@@ -56,7 +61,12 @@
     font-size: 28px;
     font-weight: 500;
     color: #FF8906;
-    margin: 0   ;
+    margin: 0 ;
+    text-align: left;
+}
+
+.text{
+    text-align: left;
 }
 
 .legend{
