--- a/client/src/Pages/Article/Article.module.css
+++ b/client/src/Pages/Article/Article.module.css
@@ -1,8 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-left: 80px;
+    align-items: flex-start;
 }
 
 .subContainer{
@@ -10,15 +9,16 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    width: 100%;
+    margin-left: 80px;
 }
 
 .subContainerInfo{
-    display: flex;
+   display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    column-gap: 80px;
+    margin-left: 80px;
     margin-top: 80px;
-    width: 100%;
 }
 
 .containerText{
@@ -34,7 +34,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    width: 400px;
+    width: 500px;
 }
 
 .containersubText{
@@ -45,10 +45,40 @@
     column-gap: 80px;
 }
 
+.containerName{
+    display: flex;
+    margin-left: 20px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
 .imageContainer{
     width:500px;
     height:370px;
 }
+
+.coursesContainer{
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 50px 50px;
+    margin-top: 50px;
+}
+
+.userInfo{
+    margin-top: 50px;
+    display: flex;
+}
+
+.userName{
+    margin: 0;
+    font-size: 24px;
+}
+
+.rating{
+    display: flex;
+}
+
 
 .title{
     font-size: 36px;
@@ -64,6 +94,11 @@
     margin: 0 ;
     text-align: left;
 }
+
+.subModule{
+    width: 500px;
+}
+
 
 .text{
     text-align: left;
